@@ -30,7 +30,8 @@ enum
     wxFD_OVERWRITE_PROMPT  = 0x0004,
     wxFD_FILE_MUST_EXIST   = 0x0010,
     wxFD_MULTIPLE          = 0x0020,
-    wxFD_CHANGE_DIR        = 0x0040
+    wxFD_CHANGE_DIR        = 0x0040,
+    wxFD_PREVIEW           = 0x0080
 };
 
 #if WXWIN_COMPATIBILITY_2_6
